// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
{
  "displayName": "Inspect",
  "docs": {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Inspect",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": [
    {
      "default": undefined,
      "displayName": "Inspector",
      "docs": {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Inspect.parameter.Inspector",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "TreeInspector",
            "fqn": "Amazon.CDK.TreeInspector",
            "id": "@aws-cdk/core.TreeInspector",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
      "variadic": false,
    },
  ],
  "usage": "private void Inspect(TreeInspector Inspector)",
}
`;

exports[`csharp snapshot 2`] = `
" \`Inspect\` <a name="Inspect" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect"></a>

\`\`\`csharp
private void Inspect(TreeInspector Inspector)
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`Inspector\`<sup>Required</sup> <a name="Inspector" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector"></a>

- *Type:* Amazon.CDK.TreeInspector

tree inspector to collect and process attributes.

---
"
`;

exports[`csharp snapshot 3`] = `
{
  "displayName": "MyFunction",
  "docs": {},
  "fqn": ".MyVariadicClass.MyFunction",
  "id": "my-construct-library.MyVariadicClass.myFunction",
  "parameters": [
    {
      "default": undefined,
      "displayName": "SingleInput",
      "docs": {},
      "fqn": ".MyVariadicClass.MyFunction.parameter.SingleInput",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.singleInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "double",
      },
      "variadic": false,
    },
    {
      "default": undefined,
      "displayName": "VariadicInput",
      "docs": {},
      "fqn": ".MyVariadicClass.MyFunction.parameter.VariadicInput",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "double",
      },
      "variadic": true,
    },
  ],
  "usage": "private void MyFunction(double SingleInput, double VariadicInput)",
}
`;

exports[`csharp snapshot 4`] = `
" \`MyFunction\` <a name="MyFunction" id="my-construct-library.MyVariadicClass.myFunction"></a>

\`\`\`csharp
private void MyFunction(double SingleInput, double VariadicInput)
\`\`\`

# \`SingleInput\`<sup>Required</sup> <a name="SingleInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.singleInput"></a>

- *Type:* double

---

# \`VariadicInput\`<sup>Required</sup> <a name="VariadicInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* variadic double

---
"
`;

exports[`go snapshot 1`] = `
{
  "displayName": "Inspect",
  "docs": {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Inspect",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": [
    {
      "default": undefined,
      "displayName": "inspector",
      "docs": {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Inspect.parameter.inspector",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "TreeInspector",
            "fqn": "github.com/aws/aws-cdk-go/awscdk/awscdkcore.TreeInspector",
            "id": "@aws-cdk/core.TreeInspector",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
      "variadic": false,
    },
  ],
  "usage": "func Inspect(inspector TreeInspector)",
}
`;

exports[`go snapshot 2`] = `
" \`Inspect\` <a name="Inspect" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect"></a>

\`\`\`go
func Inspect(inspector TreeInspector)
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`inspector\`<sup>Required</sup> <a name="inspector" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector"></a>

- *Type:* github.com/aws/aws-cdk-go/awscdk/awscdkcore.TreeInspector

tree inspector to collect and process attributes.

---
"
`;

exports[`go snapshot 3`] = `
{
  "displayName": "MyFunction",
  "docs": {},
  "fqn": "github.com/acme/project-name/myconstructlibrary.MyVariadicClass.MyFunction",
  "id": "my-construct-library.MyVariadicClass.myFunction",
  "parameters": [
    {
      "default": undefined,
      "displayName": "singleInput",
      "docs": {},
      "fqn": "github.com/acme/project-name/myconstructlibrary.MyVariadicClass.MyFunction.parameter.singleInput",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.singleInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "*f64",
      },
      "variadic": false,
    },
    {
      "default": undefined,
      "displayName": "variadicInput",
      "docs": {},
      "fqn": "github.com/acme/project-name/myconstructlibrary.MyVariadicClass.MyFunction.parameter.variadicInput",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "*f64",
      },
      "variadic": true,
    },
  ],
  "usage": "func MyFunction(singleInput *f64, variadicInput *f64)",
}
`;

exports[`go snapshot 4`] = `
" \`MyFunction\` <a name="MyFunction" id="my-construct-library.MyVariadicClass.myFunction"></a>

\`\`\`go
func MyFunction(singleInput *f64, variadicInput *f64)
\`\`\`

# \`singleInput\`<sup>Required</sup> <a name="singleInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.singleInput"></a>

- *Type:* *f64

---

# \`variadicInput\`<sup>Required</sup> <a name="variadicInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* variadic *f64

---
"
`;

exports[`java snapshot 1`] = `
{
  "displayName": "inspect",
  "docs": {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.inspect",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": [
    {
      "default": undefined,
      "displayName": "inspector",
      "docs": {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.inspect.parameter.inspector",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "TreeInspector",
            "fqn": "software.amazon.awscdk.core.TreeInspector",
            "id": "@aws-cdk/core.TreeInspector",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
      "variadic": false,
    },
  ],
  "usage": "public void inspect(TreeInspector inspector)",
}
`;

exports[`java snapshot 2`] = `
" \`inspect\` <a name="inspect" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect"></a>

\`\`\`java
public void inspect(TreeInspector inspector)
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`inspector\`<sup>Required</sup> <a name="inspector" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector"></a>

- *Type:* software.amazon.awscdk.core.TreeInspector

tree inspector to collect and process attributes.

---
"
`;

exports[`java snapshot 3`] = `
{
  "displayName": "myFunction",
  "docs": {},
  "fqn": ".MyVariadicClass.myFunction",
  "id": "my-construct-library.MyVariadicClass.myFunction",
  "parameters": [
    {
      "default": undefined,
      "displayName": "singleInput",
      "docs": {},
      "fqn": ".MyVariadicClass.myFunction.parameter.singleInput",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.singleInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "java.lang.Number",
      },
      "variadic": false,
    },
    {
      "default": undefined,
      "displayName": "variadicInput",
      "docs": {},
      "fqn": ".MyVariadicClass.myFunction.parameter.variadicInput",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "java.lang.Number",
      },
      "variadic": true,
    },
  ],
  "usage": "public void myFunction(java.lang.Number singleInput, java.lang.Number variadicInput)",
}
`;

exports[`java snapshot 4`] = `
" \`myFunction\` <a name="myFunction" id="my-construct-library.MyVariadicClass.myFunction"></a>

\`\`\`java
public void myFunction(java.lang.Number singleInput, java.lang.Number variadicInput)
\`\`\`

# \`singleInput\`<sup>Required</sup> <a name="singleInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.singleInput"></a>

- *Type:* java.lang.Number

---

# \`variadicInput\`<sup>Required</sup> <a name="variadicInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* variadic java.lang.Number

---
"
`;

exports[`python snapshot 1`] = `
{
  "displayName": "inspect",
  "docs": {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.inspect",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": [
    {
      "default": undefined,
      "displayName": "inspector",
      "docs": {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.inspect.parameter.inspector",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "TreeInspector",
            "fqn": "aws_cdk.core.TreeInspector",
            "id": "@aws-cdk/core.TreeInspector",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
      "variadic": false,
    },
  ],
  "usage": "def inspect(
  inspector: TreeInspector
) -> None",
}
`;

exports[`python snapshot 2`] = `
" \`inspect\` <a name="inspect" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect"></a>

\`\`\`python
def inspect(
  inspector: TreeInspector
) -> None
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`inspector\`<sup>Required</sup> <a name="inspector" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector"></a>

- *Type:* aws_cdk.core.TreeInspector

tree inspector to collect and process attributes.

---
"
`;

exports[`python snapshot 3`] = `
{
  "displayName": "my_function",
  "docs": {},
  "fqn": "sumu_constructs.core.MyVariadicClass.my_function",
  "id": "my-construct-library.MyVariadicClass.myFunction",
  "parameters": [
    {
      "default": undefined,
      "displayName": "single_input",
      "docs": {},
      "fqn": "sumu_constructs.core.MyVariadicClass.my_function.parameter.single_input",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.singleInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "typing.Union[int, float]",
      },
      "variadic": false,
    },
    {
      "default": undefined,
      "displayName": "variadic_input",
      "docs": {},
      "fqn": "sumu_constructs.core.MyVariadicClass.my_function.parameter.variadic_input",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "typing.Union[int, float]",
      },
      "variadic": true,
    },
  ],
  "usage": "def my_function(
  single_input: typing.Union[int, float],
  variadic_input: typing.Union[int, float]
) -> None",
}
`;

exports[`python snapshot 4`] = `
" \`my_function\` <a name="my_function" id="my-construct-library.MyVariadicClass.myFunction"></a>

\`\`\`python
def my_function(
  single_input: typing.Union[int, float],
  variadic_input: typing.Union[int, float]
) -> None
\`\`\`

# \`single_input\`<sup>Required</sup> <a name="single_input" id="my-construct-library.MyVariadicClass.myFunction.parameter.singleInput"></a>

- *Type:* typing.Union[int, float]

---

# \`variadic_input\`<sup>Required</sup> <a name="variadic_input" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* variadic typing.Union[int, float]

---
"
`;

exports[`typescript snapshot 1`] = `
{
  "displayName": "inspect",
  "docs": {
    "summary": "Examines the CloudFormation resource and discloses attributes.",
  },
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect",
  "parameters": [
    {
      "default": undefined,
      "displayName": "inspector",
      "docs": {
        "summary": "- tree inspector to collect and process attributes.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector",
      "optional": undefined,
      "type": {
        "formattingPattern": "%",
        "types": [
          {
            "displayName": "TreeInspector",
            "fqn": "@aws-cdk/core.TreeInspector",
            "id": "@aws-cdk/core.TreeInspector",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
      "variadic": false,
    },
  ],
  "usage": "public inspect(inspector: TreeInspector): void",
}
`;

exports[`typescript snapshot 2`] = `
" \`inspect\` <a name="inspect" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect"></a>

\`\`\`typescript
public inspect(inspector: TreeInspector): void
\`\`\`

Examines the CloudFormation resource and discloses attributes.

# \`inspector\`<sup>Required</sup> <a name="inspector" id="@aws-cdk/aws-ecr.CfnPublicRepository.inspect.parameter.inspector"></a>

- *Type:* @aws-cdk/core.TreeInspector

tree inspector to collect and process attributes.

---
"
`;

exports[`typescript snapshot 3`] = `
{
  "displayName": "myFunction",
  "docs": {},
  "fqn": "my-construct-library.MyVariadicClass.myFunction",
  "id": "my-construct-library.MyVariadicClass.myFunction",
  "parameters": [
    {
      "default": undefined,
      "displayName": "singleInput",
      "docs": {},
      "fqn": "my-construct-library.MyVariadicClass.myFunction.parameter.singleInput",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.singleInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "number",
      },
      "variadic": false,
    },
    {
      "default": undefined,
      "displayName": "variadicInput",
      "docs": {},
      "fqn": "my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput",
      "id": "my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput",
      "optional": undefined,
      "type": {
        "formattingPattern": "number",
      },
      "variadic": true,
    },
  ],
  "usage": "public myFunction(singleInput: number, variadicInput: number): void",
}
`;

exports[`typescript snapshot 4`] = `
" \`myFunction\` <a name="myFunction" id="my-construct-library.MyVariadicClass.myFunction"></a>

\`\`\`typescript
public myFunction(singleInput: number, variadicInput: number): void
\`\`\`

# \`singleInput\`<sup>Required</sup> <a name="singleInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.singleInput"></a>

- *Type:* number

---

# \`variadicInput\`<sup>Required</sup> <a name="variadicInput" id="my-construct-library.MyVariadicClass.myFunction.parameter.variadicInput"></a>

- *Type:* variadic number

---
"
`;
